--- a/src/components/burger-constructor-item/burger-constructor-item.module.css
+++ b/src/components/burger-constructor-item/burger-constructor-item.module.css
@@ -4,3 +4,11 @@
   flex-direction: row;
   margin-bottom: calc(var(--offset-base-size) * 4);
 }
+
+.ingredientEl {
+  cursor: pointer;
+}
+
+.drag {
+  cursor: pointer;
+}
