--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -1,12 +1,3 @@
-.burgerBuilder {
+.burgerIngredients {
   width: 50%;
-}
-
-.tabs {
-  display: flex;
-}
-
-.tabContent {
-  height: 70vh;
-  overflow-y: scroll;
 }
