--- a/src/components/header-item/header-item.module.css
+++ b/src/components/header-item/header-item.module.css
@@ -3,6 +3,13 @@
   flex-direction: row;
 }
 
+.link {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  text-decoration: none;
+}
+
 .text {
   align-self: center;
 }
