--- a/src/components/burger-constructor-item/burger-constructor-item.module.css
+++ b/src/components/burger-constructor-item/burger-constructor-item.module.css
@@ -7,6 +7,8 @@
 
 .ingredientEl {
   cursor: pointer;
+  margin-left: calc(var(--offset-base-size) * 2);
+  margin-right: calc(var(--offset-base-size) * 2);
 }
 
 .drag {
