--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -1,5 +1,7 @@
 .ingredients {
   border: 1px dashed transparent;
+  margin-left: calc(var(--offset-base-size) * 5);
+  margin-top: calc(var(--offset-base-size) * 25);
   width: 50%;
 }
 
@@ -18,4 +20,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  margin-right: calc(var(--offset-base-size) * 3);
+  margin-top: calc(var(--offset-base-size) * 10);
+  padding-bottom: calc(var(--offset-base-size) * 5);
 }
