sprint-4/step-2. Adding libraries. Cypress testing.

--- a/src/components/burger-ingredients-card-item/burger-ingredients-card-item.module.css
+++ b/src/components/burger-ingredients-card-item/burger-ingredients-card-item.module.css
@@ -8,6 +8,13 @@
   text-align: center;
 }
 
+.priceCurrency {
+  display: flex;
+  justify-content: center;
+  padding-bottom: calc(var(--offset-base-size) * 1);
+  padding-top: calc(var(--offset-base-size) * 1);
+}
+
 .currencyIcon {
   margin-left: calc(var(--offset-base-size) * 2);
   vertical-align: bottom;
