--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -1,3 +1,5 @@
 .burgerIngredients {
+  margin-right: calc(var(--offset-base-size) * 5);
+  margin-top: calc(var(--offset-base-size) * 10);
   width: 50%;
 }
