--- a/src/pages/feeds/feeds.module.css
+++ b/src/pages/feeds/feeds.module.css
@@ -1,4 +1,6 @@
 .feedsWrapper {
+  margin-right: calc(var(--offset-base-size) * 5);
+  margin-top: calc(var(--offset-base-size) * 10);
   width: calc(100% - var(--offset-base-size) * 5);
 }
 
